# pandabear-erp

./: .env.example  .gitignore  AGENTS.md  README.md  description.md  ideal_arhc.md  main.py  new-file_Rules.md  new_file_Rules.md  pandabear_zero_Data_leakage_ai_insights.docx  pyproject.toml  why_not.md
evals/: results.json  routing_eval.py
pandabear/: admin.py  airgap.py  api.py  audit.py  config.py  db.py  escalation.py  executor.py  github_webhook.py  graph.py  memory.py  models.py  onboarding.py  policy.py  registry.py  schema.sql  telegram_bot.py  toolgen.py  vault.py
scripts/: seed_credentials.py  seed_demo.py  seed_firebase.py  seed_projects.py
tests/: test_core.py  test_security.py
tools/demo/: check_stock.py  search_notes.py
tools/platform/: fb_probe.py  pg_probe.py
