[project]
name = "pandabear-erp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "firebase-admin>=7.5.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-multipart>=0.0.32",
    "python-telegram-bot>=22.8",
    "uvicorn[standard]>=0.51.0",
]
